--- a/ind0315.html
+++ b/ind0315.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1> Holi </h1>
-    <script src="lallla0315.js"></script>
+    <script src="lol.js"></script>
 </body>
 </html>
